@@ -1,4 +1,4 @@
-(test-init "Miscellaneous" 172)
+(test-init "Miscellaneous" 173)
 
 ;;; DSSSL spec example 11
 (test '(3 4 5 6) (lambda x x) 3 4 5 6)
@@ -820,3 +820,50 @@
 (test 7 inline-two-calls -5)
 (test #f check-even 200001)
 (test #t check-even 18)
+
+;; Savannah bug #27011: ArrayIndexOutOfBoundsException after 20 local variables
+(define (big-let) ; no argument!
+  (define x0  "a")
+  (define x1  "a")
+  (define x2  "a")
+  (define x3  "a")
+  (define x4  "a")
+  (define x5  "a")
+  (define x6  "a")
+  (define x7  "a")
+  (define x8  "a")
+  (define x9  "a")
+  (define x10 "a")
+  (define x11 "a")
+  (define x12 "a")
+  (define x13 "a")
+  (define x14 "a")
+  (define x15 "a")
+  (define x16 "a")
+  (define x17 "a")
+  (define x18 "a")
+  (define x19 "a")
+  (define x20 "a")
+  (set! x0  x1 )
+  (set! x1  x2 )
+  (set! x2  x3 ) 
+  (set! x3  x4 )
+  (set! x4  x5 )
+  (set! x5  x6 )
+  (set! x6  x7 )
+  (set! x7  x8 )
+  (set! x8  x9 )
+  (set! x9  x10)
+  (set! x10 x11)
+  (set! x11 x12)
+  (set! x12 x13)
+  (set! x13 x14)
+  (set! x14 x15)
+  (set! x15 x16)
+  (set! x16 x17)
+  (set! x17 x18)
+  (set! x18 x19)
+  (set! x19 x20)
+  (set! x20 x0 ) 
+  x0)
+(test "a" big-let)
